[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
langchain = "^1.2.0"
langchain-chroma = "^1.1.0"
langchain-community = "^0.4.1"
langchain-ollama = "^1.0.1"
arxiv = "^2.3.1"
pypdf = "^6.5.0"
langchain-huggingface = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
